--- a/.github/workflows/PrTargetTest.yml
+++ b/.github/workflows/PrTargetTest.yml
@@ -10,5 +10,7 @@ jobs:
   print-number:
     runs-on: ubuntu-latest
     steps:
+      - name: ls
+        run: ls ./
       - name: Print README.md
-        run: cat readme.md
+        run: cat ./readme.md
