--- a/.github/workflows/PrTargetTest.yml
+++ b/.github/workflows/PrTargetTest.yml
@@ -10,7 +10,5 @@ jobs:
   print-number:
     runs-on: ubuntu-latest
     steps:
-      - name: ls
-        run: ls ./
-      - name: Print README.md
-        run: cat ./readme.md
+      - name: Build artefacts
+        run: npm run build:cjs && npm run build:bootstrap
