--- a/.github/workflows/PrTargetTest.yml
+++ b/.github/workflows/PrTargetTest.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   code_review:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: 👀 Checkout
         uses: actions/checkout@v2
