--- a/.github/workflows/PrTargetTest.yml
+++ b/.github/workflows/PrTargetTest.yml
@@ -2,9 +2,7 @@ name: PR target test
 
 on:
   pull_request_target:
-    types:
-      - opened
-      - edited
+    branches: [main, sdk-*]
 
 jobs:
   code_review:
