--- a/.github/workflows/PrTargetTest.yml
+++ b/.github/workflows/PrTargetTest.yml
@@ -2,13 +2,21 @@ name: PR target test
 
 on:
   pull_request_target:
-    branches: [main, sdk-*]
+    types:
+      - opened
+      - edited
 
 jobs:
-  code_review:
+  print-number:
     runs-on: ubuntu-latest
     steps:
-      - name: 👀 Checkout
+      - name: Checkout Commit
         uses: actions/checkout@v2
-      - name: cat readme
-        run: cat ./readme.md
+        env:
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+          S3_KEY: ${{ github.event.number }}/rollup.browser.js
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: Build artefacts
+        run: npm run build:cjs && npm run build:bootstrap
